# ncbi_nuccore_rs

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  ncbi_download.py  pyproject.toml  utils.py
.github/workflows/: ci.yaml
src/: args.rs  download.rs  errors.rs  main.rs  utils.rs
