[package]
name = "ncbi_nuccore_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
thiserror = {version = "2.0.18"}
reqwest = { version = "0.13.1"}
reqwest-retry = { version = "0.9.0"}
reqwest-middleware = {version = "0.5.0"}
indicatif = {version = "0.18.3"}
clap = {version = "4.5.54", features = ["derive"]}
console = {version = "0.16.2"}
